# sed_to_csv

./: .gitignore  CONTRIBUTING.md  Dependencies.yaml  LICENSE  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
sed_to_csv/: __init__.py  __main__.py  converter.py
tests/: test_converter.py
tests/data/: sample_00001.sed  sample_00002.sed
